--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./index.css">
-</head>
+ </head>
 <body>
     <div class="container">
     <div class="col">
@@ -22,6 +22,7 @@
     </div>
     <div class="col">
          <h1 id="hasil" class="text">hasil</h1>
+    </div>
 </div>
   
     
